--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
+    "typeRoots": ["./node_modules/@types", "./types"],
 
     // Stricter Typechecking Options
     "noUncheckedIndexedAccess": true,
